# rtiow

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  start.bat  start.sh
assets/shaders/: fshader.glsl  vshader.glsl
src/: CMakeLists.txt  app.cpp  app.h  main.cpp
src/Adder/: CMakeLists.txt  adder.cpp  adder.h
src/Graphics/: CMakeLists.txt  mesh.cpp  mesh.h  shader.cpp  shader.h  texture.cpp  texture.h  window.cpp  window.h
src/Raytracing/: CMakeLists.txt  camera.cpp  camera.h  hittable.cpp  hittable.h  ray.cpp  ray.h  raytracing.cpp  raytracing.h  sphere.cpp  sphere.h
src/Shader/: CMakeLists.txt  shader.cpp  shader.h
src/Utils/: memory.h
src/Window/: CMakeLists.txt  window.cpp  window.h
